[package]
name = "ta-common-rs"
version = "0.1.5"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2021"
license="MIT"
description="Common traits and models for technical indicators"
repository="https://github.com/immortalinfidel/ta-common.git"
homepage="https://github.com/immortalinfidel/ta-common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
